[package]
name = "test_intel_crash"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12"
wgpu = "0.9.0"
winit = "0.25.0"
# egui stuff
egui = {version = "0.12"}
egui_wgpu_backend = "0.9.0"
egui_winit_platform = {version = "0.8"}
